tests/should_fail/let_destructure_non_tuple.nv
module test
// let tuple destructure on non-tuple type
let (a, b) = 42
